# KaliAI

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  SETUP_GUIDE.md  check_ollama.sh  check_status.sh  debug_web.sh  diagnose.sh  docker-compose.yml  fix_connection.sh  pyproject.toml  quick_fix.sh  start.sh  test_launch.sh  test_ollama_connection.sh  test_web_app.py
kali_orchestrator/: __init__.py  agent.py  config.py  config.yaml  hexstrike_client.py  llm_backends.py  main.py  memory.py  reporting.py  tui.py  web_app.py
kali_orchestrator/personas/: __init__.py  bug_bounty.yaml  recon_only.yaml  red_team.yaml  web_app.yaml
kali_orchestrator/plugins/: __init__.py  base.py  metasploit_plugin.py  nmap_plugin.py  web_vuln_plugin.py
kali_orchestrator/tools/: __init__.py  metasploit_wrapper.py  nmap_wrapper.py  web_tools.py
tests/: __init__.py  test_confirmation.py  test_llm_fallback.py  test_memory.py  test_scope_enforcement.py  test_tool_chaining.py
tests/integration/: test_agent_flow.py
